# Utils

./: .gitignore  CMakeLists.txt  Globals.h  gui.cpp  gui.h  main.cpp  stdafx.h
modules/cleaners/: FindDuplicates.cpp  FindDuplicates.h  FindFiles.cpp  FindFiles.h
modules/core/: ConfigHandler.cpp  ConfigHandler.h  Logger.cpp  Logger.h
modules/settings/: Theme.cpp  Theme.h  ThemeDefinition.h  ThemeManager.cpp  ThemeManager.h
modules/utilities/: CacheHandler.cpp  CacheHandler.h  PopupHandler.cpp  PopupHandler.h  getFolder.cpp  getFolder.h
